ADB_config/compiler_output.txt
----------------- Compiler Output -----------------
compile.kt:2:28: error: syntax error: Expecting '}'.
println("Hello WoldHiWold")
                           ^
